HelpSource/static/scdoc.css
/* ... */
/* from Methods.html in HelpSource/Overview/ */

.method_item {
    margin-top: 1em;
}

.method_doc {
    margin-bottom: 0.2em;
    margin-left: 2em;
}
div.met_subclasses {
    font-size: 9pt;
    color: var(--color-fg-300);
    margin-left: 3em;
    text-align: left;
}
div.met_subclasses a {
    color: var(--color-fg-400);
}

div.met_subclasses a.seemore {
    margin-left: 0.2em;
    color: var(--color-fg-300);
}

.method_name {
    font-family: Andale Mono, monospace;
    font-size: 9.5pt;
}
#method_note {
    font-size: 9pt;
    color: var(--color-fg-200);
    border-top: 1px solid var(--color-fg-100);
    text-align: center;
    margin-top: 2em;
}
#total_count {
    font-size: 9pt;
    color: var(--color-fg-300);
}
.searchlink {
    background: var(--color-bg);
    text-align: center;
    font-size: 9pt;
    padding: 0.25em;
    margin: 0.25em 0;
}

/* from Documents.html and Classes.html in HelpSource/Overview/ */
#doclist {
    margin-top: 1em;
}
.result_item {
    margin-left: 1.5em;
    margin-top: 0.2em;
}
#total_count {
    font-size: 9pt;
    color: var(--color-fg-200);
}

.subheader {
    color: var(--color-fg);
}

/* Copy code btn */
.codeMirrorContainer {
    position: relative;
}

.btn {
    position: absolute;
    top: 4px;
    right: 10px;
    display: none;
    background: none;
    border: none;
    cursor: pointer;
    width: 20px;
    height: 20px;
    margin: 0;
    padding: 0;
    z-index: 1000;
}

.copyIco:hover {
    fill: var(--color-cm-class);
}

.copyIco,
.checkmarkIco {
    width: 20px;
    height: 20px;
    display: block;
    fill: var(--color-cm-comment);
    transition: fill .3s ease;
}

.checkmarkIco {
    display: none;
    position: absolute;
    top: 0px;
    left: 0px;
}

